@@ -21,6 +21,7 @@ export(geom_tree)
 export(get.fields)
 export(get.placements)
 export(get.subs)
+export(get.tipseq)
 export(get.tree)
 export(get.treeinfo)
 export(get.treetext)
@@ -47,6 +48,7 @@ exportClasses(paml_rst)
 exportMethods(get.fields)
 exportMethods(get.placements)
 exportMethods(get.subs)
+exportMethods(get.tipseq)
 exportMethods(get.tree)
 exportMethods(get.treeinfo)
 exportMethods(get.treetext)
