@@ -1,0 +1,27 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/AllGenerics.R, R/codeml.R, R/paml_rst.R
+\docType{methods}
+\name{get.tipseq}
+\alias{get.tipseq}
+\alias{get.tipseq,codeml-method}
+\alias{get.tipseq,paml_rst-method}
+\title{get.tipseq method}
+\usage{
+get.tipseq(object, ...)
+
+\S4method{get.tipseq}{codeml}(object, ...)
+
+\S4method{get.tipseq}{paml_rst}(object, ...)
+}
+\arguments{
+\item{object}{one of paml_rst or codeml object}
+
+\item{...}{additional parameter}
+}
+\value{
+character
+}
+\description{
+get.tipseq method
+}
+
